--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,8 @@ action="{{ url_for('login', next=request.args.get('next')) }}"
 action="{{ url_for('login') }}" 
 {% endif %}
 method="post" class="form-contact">
-<p><label>Email: </label> <input type="text" name="email" value="" requied />
-<p><label>Пароль: </label> <input type="password" name="psw" value="" requied />
+<p><label>Email: </label> <input type="text" name="email" value="" required />
+<p><label>Пароль: </label> <input type="password" name="psw" value="" required />
 <p><input type="checkbox" name="remainme" /> Запомнить меня
 <p><input type="submit" value="Войти" />
 <hr align=left width="300px">
